Wed Nov 25 00:48:29 1998  Graham  <grahams@rcp.co.uk>

	* reload1.c (reload): Remove unused variable.
	(reload_reg_free_for_value_p): Add missing parameter definition.

	* jump.c (jump_optimize): Remove unused variable.

Wed Nov 25 00:07:11 1998  Jeffrey A Law  (law@cygnus.com)

	* Makefile.in (graph.o): Depend on $(RTL_H), not rtl.h.

	* cse.c (fold_rtx): Make autoincrement addressing mode tests be
	runtime selectable.
	* expr.c (move_by_pieces): Similarly.
	(move_by_pieces_1, clear_by_pieces, clear_by_pieces_1): Similarly.
	* flow.c (find_auto_inc): Similarly.
	(try_pre_increment): Similarly.
	* loop.c (strength_reduce): Similarly.
	* regclass.c (auto_inc_dec_reg_p): Similarly.
	* regmove.c (try_auto_increment): Similarly.
	(fixup_match_1): Similarly.
	* rtl.h (HAVE_PRE_INCREMENT): Define if not already defined.
	(HAVE_PRE_DECREMENT): Similarly.
	(HAVE_POST_INCREMENT, HAVE_POST_DECREMENT): Similarly.
	* Corresponding changes to all target header files.
	* tm.texi: Update docs for autoinc addressing modes.

Tue Nov 24 20:24:59 1998  Jim Wilson  <wilson@cygnus.com>

	* configure.in (m68020-*-elf*, m68k-*-elf*): New targets.
	* configure: Rebuild.
	* config/elfos.h: New file.
	* config/m68k/m68020-elf.h, config/m68k/m68kelf.h,
	config/m68k/t-m68kelf: New file.
	
Tue Nov 24 13:40:06 1998  Jeffrey A Law  (law@cygnus.com)

	* Makefile.in (HOST_AR): Define.
	(HOST_AR_FLAGS, HOST_RANLIB, HOST_RANLIB_TEST): Similarly.
	(libcpp.a): Use the host tools explicitly.
	(STAGESTUFF): Add libcpp.a.

Tue Nov 24 09:33:49 1998  Nick Clifton  <nickc@cygnus.com>

	* config/m32r/m32r.md (movstrsi_internal): Describe changes made
	to source and destination registers.

Mon Nov 23 20:28:02 1998  Mike Stump  <mrs@wrs.com>

	* libgcc2.c (top_elt): Remove top_elt, it isn't thread safe.
	The strategy we now use is to pre allocate the top_elt along
	with the EH context so that each thread has its own top_elt.
	This is necessary as the dynmanic cleanup chain is used on the